098_bst_map/grade.txt
Grading at 11/08/2022:23:06:03.814980
For commit ID 0bc1d969867df7f6b9d59424b0b102661db79bc1
Grading at Tue Nov  8 06:06:02 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = int]’:
bstmap.h:85:16:   required from here
bstmap.h:108:25: error: invalid type argument of unary ‘*’ (have ‘int’)
  108 |       const K predKey = *predecessor->key;
      |                         ^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:85:16:   required from here
bstmap.h:108:25: error: invalid type argument of unary ‘*’ (have ‘int’)
  108 |       const K predKey = *predecessor->key;
      |                         ^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = Tester]’:
bstmap.h:85:16:   required from here
bstmap.h:108:25: error: invalid type argument of unary ‘*’ (have ‘int’)
  108 |       const K predKey = *predecessor->key;
      |                         ^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:85:16:   required from here
bstmap.h:108:25: error: no match for ‘operator*’ (operand type is ‘std::__cxx11::basic_string<char>’)
  108 |       const K predKey = *predecessor->key;
      |                         ^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:85:16:   required from here
bstmap.h:108:25: error: no match for ‘operator*’ (operand type is ‘std::__cxx11::basic_string<char>’)
  108 |       const K predKey = *predecessor->key;
      |                         ^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:85:16:   required from here
bstmap.h:108:25: error: no match for ‘operator*’ (operand type is ‘std::__cxx11::basic_string<char>’)
  108 |       const K predKey = *predecessor->key;
      |                         ^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = int]’:
bstmap.h:85:16:   required from here
bstmap.h:108:25: error: no match for ‘operator*’ (operand type is ‘Tester’)
  108 |       const K predKey = *predecessor->key;
      |                         ^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:85:16:   required from here
bstmap.h:108:25: error: no match for ‘operator*’ (operand type is ‘Tester’)
  108 |       const K predKey = *predecessor->key;
      |                         ^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = Tester]’:
bstmap.h:85:16:   required from here
bstmap.h:108:25: error: no match for ‘operator*’ (operand type is ‘Tester’)
  108 |       const K predKey = *predecessor->key;
      |                         ^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.

Overall Grade: F
